доработки NotificationHistory: пагинация, перенос в сервис
