# src/storage/api-docs/api-docs.json
@@ -135,6 +135,15 @@
                             "type": "integer"
                         },
                         "example": 1
+                    },
+                    {
+                        "name": "cursor",
+                        "in": "query",
+                        "description": "Cursor for the next page of results",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 ],
                 "responses": {
@@ -316,6 +325,48 @@
                             },
                             "type": "object"
                         }
+                    },
+                    "links": {
+                        "properties": {
+                            "first": {
+                                "type": "string",
+                                "nullable": true
+                            },
+                            "last": {
+                                "type": "string",
+                                "nullable": true
+                            },
+                            "prev": {
+                                "type": "string",
+                                "nullable": true
+                            },
+                            "next": {
+                                "type": "string",
+                                "nullable": true
+                            }
+                        },
+                        "type": "object"
+                    },
+                    "meta": {
+                        "properties": {
+                            "path": {
+                                "type": "string",
+                                "example": "http://localhost:8080/api/recipients/1/notifications"
+                            },
+                            "per_page": {
+                                "type": "integer",
+                                "example": 15
+                            },
+                            "next_cursor": {
+                                "type": "string",
+                                "nullable": true
+                            },
+                            "prev_cursor": {
+                                "type": "string",
+                                "nullable": true
+                            }
+                        },
+                        "type": "object"
                     }
                 },
                 "type": "object"
